UAA. Fjerner frist fra Oppfølging, da man skal bruke På vent funksjonaliteten i stedet.
